优化性能测试模块